compilelog.log

/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c: In function 'progress_info_handler':
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:90:5: error: unknown type name 'client_status_t'; did you mean 'client_state_t'?
   90 |     client_status_t *clients = ota_handler_get_status(&count);
      |     ^~~~~~~~~~~~~~~
      |     client_state_t
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:90:32: error: initialization of 'int *' from incompatible pointer type 'client_status_info_t *' [-Wincompatible-pointer-types]
   90 |     client_status_t *clients = ota_handler_get_status(&count);
      |                                ^~~~~~~~~~~~~~~~~~~~~~
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:95:59: error: request for member 'client_name' in something not a structure or union
   95 |         cJSON_AddStringToObject(item, "client", clients[i].client_name);
      |                                                           ^
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:96:61: error: request for member 'progress' in something not a structure or union
   96 |         cJSON_AddNumberToObject(item, "progress", clients[i].progress);
      |                                                             ^
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:98:23: error: request for member 'partition' in something not a structure or union
   98 |             clients[i].partition == PARTITION_A ? "A" : "B");
      |                       ^
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:99:60: error: request for member 'upgrading' in something not a structure or union
   99 |         cJSON_AddBoolToObject(item, "upgrading", clients[i].upgrading);
      |                                                            ^
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:101:23: error: request for member 'last_result' in something not a structure or union
  101 |             clients[i].last_result ? "success" : "fail");
      |                       ^
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c: At top level:
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:20:12: warning: 'current_progress' defined but not used [-Wunused-variable]
   20 | static int current_progress = 0; // 0~100
      |            ^~~~~~~~~~~~~~~~
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:19:13: warning: 'task_pending' defined but not used [-Wunused-variable]
   19 | static bool task_pending = false;
      |             ^~~~~~~~~~~~
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/webserver/webserver.c:18:13: warning: 'current_task' defined but not used [-Wunused-variable]
   18 | static char current_task[512] = {0};
      |             ^~~~~~~~~~~~